create github pages

--- a/page3.html
+++ b/page3.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web maker</a></section><section once="footers" class="cid-rQ0Bw6hXgT" id="footer6-f">
+<section class="engine"><a href="https://mobirise.info/b">create your own website</a></section><section once="footers" class="cid-rQ0Bw6hXgT" id="footer6-f">
 
     
 
