--- a/page1.html
+++ b/page1.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="features3 cid-rPy1rgUyX9 mbr-parallax-background" id="features3-5">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="features3 cid-rPy1rgUyX9 mbr-parallax-background" id="features3-5">
 
     
 
