--- a/page2.html
+++ b/page2.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="step1 cid-rPy2p6vgQb mbr-parallax-background" id="step1-7">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="step1 cid-rPy2p6vgQb mbr-parallax-background" id="step1-7">
 
     
 
